tests/invalid_inputs/sema/function_decl_inside_method.cpp

struct S {
	void f() {
		void g();
	}
}
